force-app/main/default/objects/iManageTemplates__mdt/iManageTemplates__mdt.object-meta.xml
<CustomObject>
    <label>iManageTemplates</label>
    <pluralLabel>iManageTemplates</pluralLabel>
</CustomObject>