force-app/main/default/objects/iManageTemplates__mdt/fields/FolderName__c.field-meta.xml
<CustomField>
    <fullName>FolderName__c</fullName>
    <label>FolderName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>