force-app/main/default/objects/iManageTemplates__mdt/fields/IsDocketing__c.field-meta.xml
<CustomField>
    <fullName>IsDocketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDocketing</label>
    <type>Checkbox</type>
</CustomField>