force-app/main/default/objects/iManageTemplates__mdt/fields/IsEmails__c.field-meta.xml
<CustomField>
    <fullName>IsEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEmails</label>
    <type>Checkbox</type>
</CustomField>