force-app/main/default/objects/iManageTemplates__mdt/fields/Sub_Folder__c.field-meta.xml
<CustomField>
    <fullName>Sub_Folder__c</fullName>
    <label>Sub Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>