force-app/main/default/objects/iManageTemplates__mdt/listViews/AdminView.listView-meta.xml
<ListView>
    <fullName>AdminView</fullName>
    <columns>MasterLabel</columns>
    <columns>ObjectName__c</columns>
    <columns>DeveloperName</columns>
    <columns>FolderName__c</columns>
    <columns>Sub_Folder__c</columns>
    <columns>IsDocuSign__c</columns>
    <columns>IsEmails__c</columns>
    <columns>IsDocketing__c</columns>
    <filterScope>Everything</filterScope>
    <label>AdminView</label>
</ListView>